crates/toml_edit/tests/snapshots/invalid/spec-1.1.0/common-19-0.stderr
TOML parse error at line 3, column 48
  |
3 | apos15 = '''Here are fifteen apostrophes: ''''''''''''''''''  # INVALID
  |                                                ^
unexpected key or value, expected newline, `#`
